Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6139

rapps: does not update info field correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Applications
    • Operating System: ReactOS
      Platform: x86 Hardware

    Description

      Created an attachment (id=7171)
      Screenshot

      Open ROS app manager, hit 'Available for installation', hit '7-zip', hit letter D in your keyboard and ROS app manager will still display information about 7-zip.
      r54638, VMWare 8.

      Attachments

        Activity

          People

            ThFabba ThFabba
            EDIJS EDIJS
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: