[RAPPS] - Fix info display on selection change. Patch by Carlo Bramini. CORE-6139 #resolve

svn path=/trunk/; revision=61043