reactos/base/applications/rapps/listview.c
@@ -103,7 +103,7 @@ CreateListView(HWND hwnd)
     hListView = CreateWindowExW(WS_EX_CLIENTEDGE,
                                 WC_LISTVIEWW,
                                 L"",
-                                WS_CHILD | WS_VISIBLE | LVS_SORTASCENDING | LVS_REPORT | LVS_SINGLESEL,
+                                WS_CHILD | WS_VISIBLE | LVS_SORTASCENDING | LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS,
                                 205, 28, 465, 250,
                                 hwnd,
                                 NULL,
